--- a/Architectures/app/src/main/res/values/strings.xml
+++ b/Architectures/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="app_name">Event Bus Pattern</string>
-    <string name="item_event_description_sport">Icono del deporte</string>
-    <string name="item_event_warning">Pospuesto</string>
-    <string name="item_event_results">1º: %1s\n2º: %2s\n3º: %3s</string>
-    <string name="main_tv_ad">PUBLICIDAD</string>
+    <string name="app_name">Wine app</string>
+    <string name="user">Usuario</string>
+    <string name="password">Contraseña</string>
+    <string name="login">Ingresar</string>
+    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
 </resources>
